--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,10 +19,14 @@
           <a class="nav-link" href="#" routerLinkActive= "active" (click)="logOut()">Logout</a>
         </li>
       </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="text" placeholder="Redeem" aria-label="Redeem">
-        <button class="btn btn-outline-success" type="submit">Submit</button>
-      </form>
+      <div class="d-flex" role="search">
+        <input class="form-control me-2" type="text" placeholder="Redeem" aria-label="Redeem" [(ngModel)]="code">
+        <button class="btn btn-outline-success" type="submit" (click)="redeemCode()">Submit</button>
+      </div>
     </div>
   </div>
 </nav>
+<div>
+  <p style="float:right;" class="accepted" *ngIf="codeWasAccepted">Code accepted :)</p>
+  <p style="float:right;" class="denied" *ngIf="codeWasDenied">Code denied ;( try again nerd</p>
+</div>
